--- a/contactos.html
+++ b/contactos.html
@@ -12,7 +12,7 @@
     <div class="cont">
         <header class="box">
             <h1>Contactos</h1>
-            <a href="agenda.html">Inicio</a>
+            <a href="index.html">Inicio</a>
         </header>
         <!--Tabla y formulario-->
         <div class="cont-tabla-regidstro">
